2004-01-04  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_enterprise.py: test deleting rows not in cache

	* twisted/enterprise/reflector.py: deleted rows don't have to be
	in cache

	* doc/examples/row_example.py: use KeyFactory from row_util

	* doc/examples/row_util.py: add KeyFactory

2003-12-31  Brian Warner  <warner@lothar.com>

	* twisted/internet/defer.py (Deferred.setTimeout): if the Deferred
	has already been called, don't bother with the timeout. This
	happens when trial.util.deferredResult is used with a timeout
	argument and the Deferred was created by defer.succeed().
	* twisted/test/test_defer.py
	(DeferredTestCase.testImmediateSuccess2): test for same

2003-12-31  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/protocols/ident.py: Client and server ident implementation
	* twisted/test/test_ident.py: Test cases for ident protocol

2003-12-29  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/spread/pb.py: Changed PBServerFactory to use "protocol"
	instance attribute for Broker creation.

2003-12-26  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/web/server.py: display of tracebacks on web pages can
	now be disabled by setting displayTracebacks to False on the Site
	or by using applicable tap option. Woven does not yet use
	this attribute.

2003-12-23  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/web/client.py: if Host header is passed, use that
	instead of extracting from request URL.

2003-12-14  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_enterprise.py: Frederico Di Gregorio's patch
	adding a psycopg test case.

2003-12-09  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.1, based on rc4.

2003-12-06  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/internet/wxreactor.py: Added experimental wxPython reactor,
	which seems to work better than the twisted.internet.wxsupport.

2003-12-05  Paul Swartz  <z3p@twistedmatrix.com>
